refactor: Da classe MedicalRecordController e MedicDto, para remover o uso do MapStruct